Update and rename pricing_simulation_bike_in_India_fix_log_newline.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Pricing Strategies Simulation – Bike India</title>
+<title><h2></h2>Pricing Strategies Simulation – Bike India</h2></title>
 <style>
   :root{ --bg:#0f172a; --bg2:#111827; --card:#0b1220; --ink:#e5f2ff; --muted:#9fb7d0;
          --accent:#22d3ee; --accent-2:#a78bfa; --border:#1e2b47; --shadow:0 12px 30px rgba(0,0,0,.35); }
