--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title><h2></h2>Pricing Strategies Simulation – Bike India</h2></title>
+<title><h2></h1>Pricing Strategies Simulation – Bike India</h1></title>
 <style>
   :root{ --bg:#0f172a; --bg2:#111827; --card:#0b1220; --ink:#e5f2ff; --muted:#9fb7d0;
          --accent:#22d3ee; --accent-2:#a78bfa; --border:#1e2b47; --shadow:0 12px 30px rgba(0,0,0,.35); }
@@ -213,7 +213,7 @@ main.panel .section:has(> #log){ grid-area:log; border-top:0; padding-top:0; }
         <canvas id="c_profit" style="display:none"></canvas>
       </div>
 
-      <div class="logwrap"><div class="log" id="log">Ready. Choose inputs and submit.</div></div>
+      <div class="logwrap"><div class="log" id="log">Ready. In the left panel <-Choose inputs and submit.</div></div>
     </main>
   </div>
 
